# pkg/requests/create.user.req.go
@@ -1,9 +1,9 @@
 package requests
 
 type CreateUserReq struct {
-	UserName        string `json:"userName" validate:"required"`
-	FullName        string `json:"fullName" validate:"required"`
-	Email           string `json:"email" validate:"required,email"`
-	Password        string `json:"password" validate:"required"`
-	ConfirmPassword string `json:"confirmPassword" validate:"required,eqfield=Password"`
+	UserName        string `json:"userName" binding:"required"`
+	FullName        string `json:"fullName" binding:"required"`
+	Email           string `json:"email" binding:"required,email"`
+	Password        string `json:"password" binding:"required"`
+	ConfirmPassword string `json:"confirmPassword" binding:"required,eqfield=Password"`
 }
