# pkg/requests/login.req.go
@@ -1,0 +1,6 @@
+package requests
+
+type LoginReq struct {
+	UserName        string `json:"userName" binding:"required"`
+	Password        string `json:"password" binding:"required"`
+}
