# pkg/responses/user.res.go
@@ -1,0 +1,13 @@
+package responses
+
+import "time"
+
+type UserResponse struct {
+	Id        uint
+	UserName  string
+	FullName  string
+	Email     string
+	Gender    string
+	AvatarUrl string
+	CreatedAt time.Time
+}
